--- a/bio.html
+++ b/bio.html
@@ -54,9 +54,7 @@
         <img src="Justin.jpg" alt="Your Photo">
         <h2>Biography</h2>
         <p>
-            Hello, I'm Your Full Name. I am a passionate individual with a keen interest in [your interests].
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod justo vel fringilla convallis.
-            Proin et consequat nisi. In hac habitasse platea dictumst. Integer sed massa at ligula convallis cursus.
+            Hello, I'm Justin Szabo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod justo vel fringilla convallis. Proin et consequat nisi. In hac habitasse platea dictumst. Integer sed massa at ligula convallis cursus.
         </p>
 
         <p>
