--- a/bio.html
+++ b/bio.html
@@ -53,26 +53,20 @@
 
 <body>
     <header>
-        <h1>Your Full Name</h1>
+        <h1>Dr. Justin Szabo</h1>
     </header>
 
     <section>
         <img src="Justin.jpg" alt="Your Photo">
         <h2>Biography</h2>
         <p>
-            Hello, I'm Your Full Name. I am a passionate individual with a keen interest in [your interests].
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod justo vel fringilla convallis.
-            Proin et consequat nisi. In hac habitasse platea dictumst. Integer sed massa at ligula convallis cursus.
+            Hello, I'm Justin Szabo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod justo vel fringilla convallis. Proin et consequat nisi. In hac habitasse platea dictumst. Integer sed massa at ligula convallis cursus.
         </p>
 
-        <p>
-            I have a background in [your field of expertise] and have worked on various projects that [highlight your achievements].
-            My goal is to [mention your aspirations and goals].
-        </p>
     </section>
 
     <footer>
-        <p>&copy; 2024 Your Full Name. All rights reserved.</p>
+        <p>&copy; 2024 Dr. Justin Szabo. All rights reserved.</p>
     </footer>
 </body>
 
