--- a/bio.html
+++ b/bio.html
@@ -39,7 +39,7 @@
         }
 
         h2 {
-            clear: both; /* Clear the float */
+            clear: right; /* Clear the float */
         }
 
         footer {
@@ -57,7 +57,7 @@
     </header>
 
     <section>
-<img src="Justin.jpg" alt="Your Photo" ALIGN="right">
+<img src="Justin.jpg" alt="Your Photo">
                 <h2>Biography</h2>
         <p>
             Hello, I'm Justin Szabo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod justo vel fringilla convallis. Proin et consequat nisi. In hac habitasse platea dictumst. Integer sed massa at ligula convallis cursus.
